fix: The replicas count is covered by the operation button when creating a composing Application

--- a/src/pages/projects/components/Modals/CreateApp/Services/ServiceList/index.scss
+++ b/src/pages/projects/components/Modals/CreateApp/Services/ServiceList/index.scss
@@ -18,9 +18,14 @@
   &:hover {
     border-color: $border-hover-color;
     box-shadow: 0 4px 8px 0 rgba(36, 46, 66, 0.2);
+    cursor: pointer;
 
     :global .buttons {
       display: block;
+    }
+
+    .clusters {
+      display: none;
     }
   }
 
